Suppress verbose output in RepetitaWriter when verbose is 0